--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -26,7 +26,7 @@
                     </a>
                 </td>
                 <td>
-                    <a href="/delte/{{ item.id }}">
+                    <a href="/delete/{{ item.id }}">
                         <button>Delete</button>
                     </a>
                 </td>
